// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`directive: zen-toggle-group should render 1`] = `
<div
  class="ng-scope"
  ng-class="clazz"
  ng-transclude=""
>
  <!-- ngRepeat: x in [1,2,3,4] -->
  <div
    class="zen_ui__button_container ng-scope ng-isolate-scope"
    data-stretch="false"
    ng-class="outerClazz"
    ng-repeat="x in [1,2,3,4]"
    zen-model="model"
    zen-value="::x"
  >
    <input
      class="zen_ui__toggle_button_input ng-pristine ng-untouched ng-valid ng-empty"
      id="zen-ui-id-3"
      name="zen-ui-id-1"
      ng-disabled="zenDisabled"
      ng-model="zenModel"
      ng-value="zenValue"
      type="radio"
      value="1"
    />
    <label
      class="zen_ui__button"
      data-palette="ordinary"
      for="zen-ui-id-3"
      ng-class="innerClazz"
    >
      <span
        class="zen_ui__button_text"
      >
        <span>
          <span
            ng-transclude=""
          >
            1
          </span>
        </span>
      </span>
    </label>
    <div />
  </div>
  <!-- end ngRepeat: x in [1,2,3,4] -->
  <div
    class="zen_ui__button_container ng-scope ng-isolate-scope"
    data-stretch="false"
    ng-class="outerClazz"
    ng-repeat="x in [1,2,3,4]"
    zen-model="model"
    zen-value="::x"
  >
    <input
      class="zen_ui__toggle_button_input ng-pristine ng-untouched ng-valid ng-empty"
      id="zen-ui-id-5"
      name="zen-ui-id-1"
      ng-disabled="zenDisabled"
      ng-model="zenModel"
      ng-value="zenValue"
      type="radio"
      value="2"
    />
    <label
      class="zen_ui__button"
      data-palette="ordinary"
      for="zen-ui-id-5"
      ng-class="innerClazz"
    >
      <span
        class="zen_ui__button_text"
      >
        <span>
          <span
            ng-transclude=""
          >
            2
          </span>
        </span>
      </span>
    </label>
    <div />
  </div>
  <!-- end ngRepeat: x in [1,2,3,4] -->
  <div
    class="zen_ui__button_container ng-scope ng-isolate-scope"
    data-stretch="false"
    ng-class="outerClazz"
    ng-repeat="x in [1,2,3,4]"
    zen-model="model"
    zen-value="::x"
  >
    <input
      class="zen_ui__toggle_button_input ng-pristine ng-untouched ng-valid ng-empty"
      id="zen-ui-id-7"
      name="zen-ui-id-1"
      ng-disabled="zenDisabled"
      ng-model="zenModel"
      ng-value="zenValue"
      type="radio"
      value="3"
    />
    <label
      class="zen_ui__button"
      data-palette="ordinary"
      for="zen-ui-id-7"
      ng-class="innerClazz"
    >
      <span
        class="zen_ui__button_text"
      >
        <span>
          <span
            ng-transclude=""
          >
            3
          </span>
        </span>
      </span>
    </label>
    <div />
  </div>
  <!-- end ngRepeat: x in [1,2,3,4] -->
  <div
    class="zen_ui__button_container ng-scope ng-isolate-scope"
    data-stretch="false"
    ng-class="outerClazz"
    ng-repeat="x in [1,2,3,4]"
    zen-model="model"
    zen-value="::x"
  >
    <input
      class="zen_ui__toggle_button_input ng-pristine ng-untouched ng-valid ng-empty"
      id="zen-ui-id-9"
      name="zen-ui-id-1"
      ng-disabled="zenDisabled"
      ng-model="zenModel"
      ng-value="zenValue"
      type="radio"
      value="4"
    />
    <label
      class="zen_ui__button"
      data-palette="ordinary"
      for="zen-ui-id-9"
      ng-class="innerClazz"
    >
      <span
        class="zen_ui__button_text"
      >
        <span>
          <span
            ng-transclude=""
          >
            4
          </span>
        </span>
      </span>
    </label>
    <div />
  </div>
  <!-- end ngRepeat: x in [1,2,3,4] -->
</div>
`;

exports[`directive: zen-toggle-group should render conjoined buttons 1`] = `
<div
  class="ng-scope zen_ui__conjoined_buttons"
  ng-class="clazz"
  ng-transclude=""
  zen-conjoined=""
>
  <!-- ngRepeat: x in [1,2,3,4] -->
  <div
    class="zen_ui__button_container ng-scope ng-isolate-scope"
    data-stretch="false"
    ng-class="outerClazz"
    ng-repeat="x in [1,2,3,4]"
    zen-model="model"
    zen-value="::x"
  >
    <input
      class="zen_ui__toggle_button_input ng-pristine ng-untouched ng-valid ng-empty"
      id="zen-ui-id-3"
      name="zen-ui-id-1"
      ng-disabled="zenDisabled"
      ng-model="zenModel"
      ng-value="zenValue"
      type="radio"
      value="1"
    />
    <label
      class="zen_ui__button"
      data-palette="ordinary"
      for="zen-ui-id-3"
      ng-class="innerClazz"
    >
      <span
        class="zen_ui__button_text"
      >
        <span>
          <span
            ng-transclude=""
          >
            1
          </span>
        </span>
      </span>
    </label>
    <div />
  </div>
  <!-- end ngRepeat: x in [1,2,3,4] -->
  <div
    class="zen_ui__button_container ng-scope ng-isolate-scope"
    data-stretch="false"
    ng-class="outerClazz"
    ng-repeat="x in [1,2,3,4]"
    zen-model="model"
    zen-value="::x"
  >
    <input
      class="zen_ui__toggle_button_input ng-pristine ng-untouched ng-valid ng-empty"
      id="zen-ui-id-5"
      name="zen-ui-id-1"
      ng-disabled="zenDisabled"
      ng-model="zenModel"
      ng-value="zenValue"
      type="radio"
      value="2"
    />
    <label
      class="zen_ui__button"
      data-palette="ordinary"
      for="zen-ui-id-5"
      ng-class="innerClazz"
    >
      <span
        class="zen_ui__button_text"
      >
        <span>
          <span
            ng-transclude=""
          >
            2
          </span>
        </span>
      </span>
    </label>
    <div />
  </div>
  <!-- end ngRepeat: x in [1,2,3,4] -->
  <div
    class="zen_ui__button_container ng-scope ng-isolate-scope"
    data-stretch="false"
    ng-class="outerClazz"
    ng-repeat="x in [1,2,3,4]"
    zen-model="model"
    zen-value="::x"
  >
    <input
      class="zen_ui__toggle_button_input ng-pristine ng-untouched ng-valid ng-empty"
      id="zen-ui-id-7"
      name="zen-ui-id-1"
      ng-disabled="zenDisabled"
      ng-model="zenModel"
      ng-value="zenValue"
      type="radio"
      value="3"
    />
    <label
      class="zen_ui__button"
      data-palette="ordinary"
      for="zen-ui-id-7"
      ng-class="innerClazz"
    >
      <span
        class="zen_ui__button_text"
      >
        <span>
          <span
            ng-transclude=""
          >
            3
          </span>
        </span>
      </span>
    </label>
    <div />
  </div>
  <!-- end ngRepeat: x in [1,2,3,4] -->
  <div
    class="zen_ui__button_container ng-scope ng-isolate-scope"
    data-stretch="false"
    ng-class="outerClazz"
    ng-repeat="x in [1,2,3,4]"
    zen-model="model"
    zen-value="::x"
  >
    <input
      class="zen_ui__toggle_button_input ng-pristine ng-untouched ng-valid ng-empty"
      id="zen-ui-id-9"
      name="zen-ui-id-1"
      ng-disabled="zenDisabled"
      ng-model="zenModel"
      ng-value="zenValue"
      type="radio"
      value="4"
    />
    <label
      class="zen_ui__button"
      data-palette="ordinary"
      for="zen-ui-id-9"
      ng-class="innerClazz"
    >
      <span
        class="zen_ui__button_text"
      >
        <span>
          <span
            ng-transclude=""
          >
            4
          </span>
        </span>
      </span>
    </label>
    <div />
  </div>
  <!-- end ngRepeat: x in [1,2,3,4] -->
</div>
`;
